# WarfrontEvolution

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/: attacker.hpp  base.hpp  clubman.hpp  game.hpp  menu.hpp  person.hpp  team.hpp
src/: base.cpp  clubman.cpp  game.cpp  main.cpp  menu.cpp  team.cpp
